# uav_ws

./: .gitignore  README.md  plan.md
src/: .CLAUDE.md.swp  CLAUDE.md
src/circle_crossing/: CMakeLists.txt  README.md  package.xml
src/circle_crossing/config/: circle_crossing.yaml
src/circle_crossing/launch/: circle_crossing.launch
src/circle_crossing/src/: circle_crossing_node.cpp
src/ego_bringup/launch/: ego_lidar.launch
src/ego_planner/plan_manage/launch/: advanced_param_exp.xml  run_in_exp.launch
src/indoor_inspection/: .README.md.swp  CMakeLists.txt  README.md  package.xml
src/indoor_inspection/launch/: bringup.launch  inspection.launch  mapping.launch
src/indoor_inspection/src/: inspection_node.cpp
src/lidar_to_mavros/: CMakeLists.txt  package.xml
src/lidar_to_mavros/src/: lidar_to_mavros.cpp
src/obstacle_avoidance/: CMakeLists.txt  README.md  package.xml
src/obstacle_avoidance/config/: avoidance.yaml
src/obstacle_avoidance/launch/: avoidance_demo.launch
src/obstacle_avoidance/src/: avoidance_node.cpp
src/px4ctrl/config/: ctrl_param_fpv.yaml
src/quadrotor_msgs/: CMakeLists.txt
src/quadrotor_msgs/msg/: Px4ctrlDebug.msg  TakeoffLand.msg
src/waypoint_flight/: CMakeLists.txt  README.md  package.xml
src/waypoint_flight/config/: waypoints.yaml
src/waypoint_flight/launch/: waypoint_flight.launch
src/waypoint_flight/src/: waypoint_flight_node.cpp
