<?xml version="1.0"?>
<package format="2">
  <name>circle_crossing</name>
  <version>0.1.0</version>
  <description>穿越圆圈障碍物飞行节点</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
</package>
