<?xml version="1.0"?>
<package format="2">
  <name>indoor_inspection</name>
  <version>0.1.0</version>
  <description>室内定点覆盖巡检飞行</description>

  <maintainer email="cwkj@todo.todo">cwkj</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <exec_depend>gazebo_ros</exec_depend>

  <export>
  </export>
</package>
