<?xml version="1.0"?>
<package format="2">
  <name>lidar_to_mavros</name>
  <version>1.0.0</version>
  <description>Bridge FAST_LIO odometry to MAVROS vision_pose and px4ctrl</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
