<?xml version="1.0"?>
<package format="2">
  <name>obstacle_avoidance</name>
  <version>0.1.0</version>
  <description>VFH+ 室外避障演示飞行</description>

  <maintainer email="cwkj@todo.todo">cwkj</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>

  <export>
  </export>
</package>
