<?xml version="1.0"?>
<package format="2">
  <name>waypoint_flight</name>
  <version>1.0.0</version>
  <description>Waypoint-based autonomous flight node for PX4 + MAVROS</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
</package>
